# yellow-vpn

./: .gitignore  Cargo.toml  README.md  RELEASING.md  package.json
.github/workflows/: publish.yml  release.yml
crates/vpn-engine/: Cargo.toml
crates/vpn-engine/src/: client.rs  config.rs  forward.rs  framer.rs  jni_bridge.rs  lib.rs  routing.rs
crates/vpn-engine/src/fortigate/: auth.rs  config.rs  framing.rs  mod.rs  session.rs
crates/vpn-engine/src/platform/: android.rs  mod.rs
crates/vpn-helper/: Cargo.toml
crates/vpn-helper/src/: main.rs
crates/vpn-ipc/: Cargo.toml
crates/vpn-ipc/src/: lib.rs
docs/: macos-signing.md
docs/superpowers/plans/: 2026-07-11-tauri-vpn-integration.md  2026-07-13-android-support-a1.md  2026-07-21-fortigate-support.md
docs/superpowers/specs/: 2026-07-11-tauri-vpn-integration-design.md
scripts/: build-android-engine.mjs  bump-version.mjs  prepare-helper.mjs
src/: App.css  App.tsx  fonts.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.android.conf.json  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: android_vpn.rs  auth.rs  client.rs  config.rs  error.rs  forward.rs  framer.rs  lib.rs  main.rs  pipe.rs  profiles.rs  routing.rs  signal.rs  tun_device.rs  tunnel.rs  wintun.rs
src-tauri/src/checkpoint/: auth.rs  ccc.rs  cipher.rs  framing.rs  mod.rs  session.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: ProfileDialog.tsx  ProfileList.tsx  SetupGate.tsx  StatusHero.tsx
src/components/ui/: drawer.tsx
src/hooks/: useIsMobile.ts  useVpnState.ts  useWintun.ts
src/lib/: vpn.ts
