[workspace]
resolver = "2"
members = ["src-tauri", "crates/vpn-engine", "crates/vpn-ipc"]

[workspace.package]
edition = "2024"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
windows-sys = "0.59"
