[workspace]
resolver = "2"
members = ["src-tauri", "crates/vpn-engine", "crates/vpn-ipc", "crates/vpn-helper"]

[workspace.package]
edition = "2024"
rust-version = "1.88"
version = "0.2.0"

# Release tuning: whole-program optimization for the shipped binaries. LTO +
# a single codegen unit let the optimizer inline across crate boundaries (the
# packet datapath spans vpn-engine + tokio + rustls), at the cost of slower
# release builds. `panic = "abort"` is deliberately NOT set: tokio relies on
# unwinding to isolate a panicking task instead of killing the process.
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true

[workspace.dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "sync",
    "time",
    "signal",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
windows-sys = "0.59"
