[package]
name = "yellow-vpn"
version = "0.1.0"
description = "Yellow VPN"
authors = ["Aaron King"]
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yellow_vpn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-notification = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
vpn-ipc = { path = "../crates/vpn-ipc" }
rusqlite = { version = "0.32", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Android drives the tunnel through the Kotlin VpnService plugin, reached from
# these Rust commands over JNI (see src/android_vpn.rs).
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.dev.package.scrypt]
opt-level = 3

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "z" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
