[package]
name = "vpn-engine"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "vpn_engine"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
webpki-roots = "0.26"
bytes = "1"
tun = { version = "0.7", features = ["async"] }
net-route = "0.4"
sha2 = "0.10"
thiserror = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user", "net"] }
