[package]
name = "vpn-engine"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "vpn_engine"
# `lib` for the desktop crates that link the engine; `cdylib` so the Android
# build produces a `libvpn_engine.so` the Kotlin VpnService loads via JNI.
crate-type = ["lib", "cdylib"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
webpki-roots = "0.26"
bytes = "1"
tun = { version = "0.7", features = ["async"] }
sha2 = "0.10"
thiserror = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user", "net"] }

# net-route only supports desktop OSes; Android routing is done by
# VpnService.Builder, so the engine doesn't link it there.
[target.'cfg(not(target_os = "android"))'.dependencies]
net-route = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
libc = "0.2"
