[package]
name = "vpn-helper"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "yellow-vpn-helper"
path = "src/main.rs"

[dependencies]
vpn-engine = { path = "../vpn-engine" }
vpn-ipc = { path = "../vpn-ipc" }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
] }

[profile.dev.package.scrypt]
opt-level = 3

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "z" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
